updated footerbox styling

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -8,7 +8,7 @@
 @import "components/checkbox";
 @import "components/createpost";
 @import "components/faqdropdown";
-@import "components/footer";
+@import "components/footerbox";
 @import "components/grid";
 @import "components/growingcommunities";
 @import "components/header";
