--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -7,7 +7,6 @@
 @import "components/button";
 @import "components/checkbox";
 @import "components/createpost";
-@import "components/faqdropdown";
 @import "components/footerbox";
 @import "components/grid";
 @import "components/growingcommunities";
@@ -18,19 +17,18 @@
 @import "components/messagebox";
 @import "components/nav";
 @import "components/postcard";
-@import "components/premiumhero";
 @import "components/radio";
 @import "components/recentposts";
 @import "components/requireddot";
 @import "components/slate";
 @import "components/sortview";
-@import "components/staticfooter";
 @import "components/subredditinfo";
 @import "components/totopbutton";
 @import "components/trendingcommunity";
 @import "components/votes";
 
 @import "pages/home";
+@import "pages/premium";
 @import "pages/subredditcreate";
 @import "pages/viewcommunity";
 @import "pages/viewpost";
