added a little notification for first time users notification

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/layout";
 @import "components/messagebox";
 @import "components/nav";
+@import "components/notification";
 @import "components/postcard";
 @import "components/radio";
 @import "components/recentposts";
