WIP - updating comments / post styles and functionality

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -5,6 +5,9 @@
 
 @import "components/authforms";
 @import "components/button";
+@import "components/card";
+@import "components/cardcomment";
+@import "components/cardpost";
 @import "components/checkbox";
 @import "components/createpost";
 @import "components/footerbox";
@@ -16,7 +19,6 @@
 @import "components/messagebox";
 @import "components/nav";
 @import "components/notification";
-@import "components/postcard";
 @import "components/radio";
 @import "components/recentposts";
 @import "components/requireddot";
