updated sass support and next

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,6 @@
+@import "abstracts/variables";
+@import "abstracts/mixins";
+
 @import "base/animation";
 @import "base/base";
 @import "base/typography";
