--- a/client/sass/components/_notification.scss
+++ b/client/sass/components/_notification.scss
@@ -16,6 +16,7 @@
   box-sizing: border-box;
   border-radius: 1rem;
   border: 1px solid rgb(202, 202, 202);
+  z-index: 1111;
 
   &__close {
     position: absolute;
