--- a/client/sass/pages/_viewpost.scss
+++ b/client/sass/pages/_viewpost.scss
@@ -33,7 +33,7 @@
     align-items: center;
     justify-content: space-between;
     color: #d7dadc;
-    z-index: 11;
+    z-index: 111;
 
     &__votes {
       padding: 0 12px;
@@ -111,7 +111,7 @@
   }
 
   &__comments {
-    margin: 16px 16px 0 10px;
+    margin: 16px 16px 10px 10px;
 
     &__none {
       text-align: center;
