moved card link and adjusted css to avoid double link usage

--- a/client/sass/components/_cardpost.scss
+++ b/client/sass/components/_cardpost.scss
@@ -10,7 +10,6 @@
   text-decoration: none;
 
   &-notOnPostPage {
-    cursor: pointer;
     margin-bottom: 10px;
     border-color: $grey;
   }
@@ -27,10 +26,6 @@
     &-notOnPostPage {
       background-color: #f7f7f7;
     }
-  }
-
-  &__link:focus {
-    outline: none;
   }
 
   &__details {
@@ -59,6 +54,14 @@
         mask-image: linear-gradient(180deg, #000 60%, transparent);
         max-height: 150px;
       }
+    }
+  }
+
+  &__link {
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
     }
   }
 
