connected edit page with context and updated links

--- a/client/sass/components/_notification.scss
+++ b/client/sass/components/_notification.scss
@@ -23,7 +23,8 @@
     top: 0.6rem;
     right: 0.6rem;
     cursor: pointer;
-    font-size: 1.1rem;
+    height: 1.1rem;
+    width: 1.1rem;
   }
 
   &__heading {
