--- a/client/sass/components/_card.scss
+++ b/client/sass/components/_card.scss
@@ -70,6 +70,7 @@
       border: none;
       color: inherit;
       line-height: inherit;
+      text-decoration: none;
 
       &:not(.card__actions__option--disabled) {
         cursor: pointer;
