users can now updated and delete their posts

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/cardcomment";
 @import "components/cardpost";
 @import "components/checkbox";
+@import "components/confirmbox";
 @import "components/createpost";
 @import "components/footerbox";
 @import "components/grid";
