updated info header to show when a post was edited and styling deleted comments/posts

--- a/client/sass/components/_card.scss
+++ b/client/sass/components/_card.scss
@@ -43,6 +43,12 @@
       color: #787c7e;
     }
 
+    &__date {
+      &--isEdited {
+        font-style: italic;
+      }
+    }
+
     &__user--isOwner {
       color: $blue !important;
 
