--- a/client/sass/components/_slate.scss
+++ b/client/sass/components/_slate.scss
@@ -11,7 +11,15 @@
 }
 
 .slate__render {
-  // max-height: 150px;
+  &--isDeleted {
+    color: #949494;
+    margin: -5px 0;
+
+    * > span {
+      font-style: italic !important;
+      font-size: 1.2rem;
+    }
+  }
 
   .slate__body {
     padding: 8px 10px;
