--- a/client/sass/pages/_viewcommunity.scss
+++ b/client/sass/pages/_viewcommunity.scss
@@ -27,6 +27,7 @@
       margin: 0 auto;
       margin-top: -12px;
       padding: 0 16px;
+      box-sizing: border-box;
 
       &__icon {
         border: 4px solid #fff;
