--- a/client/sass/components/_cardpost.scss
+++ b/client/sass/components/_cardpost.scss
@@ -9,6 +9,10 @@
   font-size: 1.2rem;
   text-decoration: none;
 
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
   &-notOnPostPage {
     margin-bottom: 10px;
     border-color: $grey;
@@ -34,7 +38,7 @@
     height: 100%;
 
     &-notOnPostPage > div:first-child {
-      height: 30px;
+      height: inherit;
       margin: 5px 0;
       display: flex;
       align-items: center;
