--- a/client/sass/components/_createpost.scss
+++ b/client/sass/components/_createpost.scss
@@ -1,7 +1,7 @@
 .submit-container {
   .submit {
     &__form {
-      //
+      padding: 5px;
 
       &__heading {
         display: flex;
@@ -49,7 +49,7 @@
 
       &__body {
         background-color: white;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
         border-radius: 5px;
 
         &__types {
@@ -313,6 +313,12 @@
   .submit-container {
     .submit {
       &__form {
+        padding: 5px;
+
+        &__select {
+          width: 100%;
+        }
+
         &__body {
           &__types {
             flex-wrap: wrap;
@@ -324,6 +330,11 @@
 
           &__actions {
             flex-direction: column;
+
+            & > div:nth-of-type(1) {
+              justify-content: center;
+              flex-wrap: wrap;
+            }
 
             & > div:nth-of-type(2) {
               margin-top: 16px;
