--- a/client/sass/pages/_viewcommunity.scss
+++ b/client/sass/pages/_viewcommunity.scss
@@ -96,6 +96,35 @@
   }
 }
 
+@media screen and (max-width: 550px) {
+  .community-container {
+    .community {
+      &__header {
+        height: inherit;
+        flex-direction: column;
+        align-items: center;
+        margin-top: -73px;
+        text-align: center;
+
+        > * {
+          margin-left: 0;
+          margin-right: 0;
+        }
+
+        &__icon {
+          height: 58px;
+          width: 58px;
+          margin-bottom: 14px;
+        }
+
+        &__btn {
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+}
+
 // these is extracted from above because it's used on the create post page too
 .community {
   &__box {
